# ARI

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  DEPRECATION_REMOVAL.md  DOCUMENTATION_PLAN.md  LICENSE  PROMPTS_AND_CONFIG.md  README.ja.md  README.md  README.zh.md  REFACTORING.md  SECURITY.md  Story2Proposal計画書.md  pytest.ini  requirements.txt  run_pipeline.py  setup.sh  shutdown.sh  start.sh  計画書.md
ari-core/: .gitignore  DOCUMENTATION_PLAN.md  MASTER_PLAN_handoff_impl.md  PLAN_artifact_summary_handoff.md  PLAN_claims_fulfillment_final.md  PLAN_metric_correctness_contract.md  PLAN_s2p_hard_gate.md  PLAN_s2p_hypothesis_ledger.md  PLAN_s2p_merge_refine.md  PREREG_handoff_study.md  README.md  REFACTORING.md  REQUIREMENTS.md  WORKFLOW.md  openapi_letta.json  pyproject.toml
ari-core/ari/: Plan.md  README.md  _deprecation.py  _factory.py  artifact_store.py  checkpoint.py  cli.py  cli_ear.py  config.py  container.py  core.py  cost_tracker.py  env_detect.py  lineage.py  memory_cli.py  paths.py  pidfile.py  pipeline.py  trace_store.py
ari-core/config/: README.md  default.yaml  pipeline.yaml  workflow.yaml
ari-core/containers/: README.md
ari-core/tests/: README.md  REFACTORING.md  _arch_boundaries.py  test_agent_smoke.py  test_analyze_handoff.py  test_api_lineage_decisions.py  test_api_lineage_e2e.py  test_api_paperbench.py  test_api_paperbench_worker.py  test_api_process.py  test_api_schema_contract.py  test_architecture_boundary_index.py  test_artifact_store.py  test_bfts.py  test_bfts_allow_web.py  test_bfts_deterministic_selector.py  test_bfts_diversity.py  test_bfts_eval_config_integration.py  test_bfts_frontier_score.py  test_bfts_prompt_builder.py  test_bfts_prompt_selection.py  test_checkpoint_legacy_tree.py  test_checkpoint_store.py  test_child_node_workflow.py  test_child_workdir_inherit.py  test_claim_evidence_hard_gate.py  test_claim_gate_contract.py  test_claim_gate_invariants.py  test_cli.py  test_cli_extended.py  test_cli_shim_toolcalls.py  test_clone.py  test_config.py  test_container.py  test_contract_snapshots.py  test_core_does_not_import_skills.py  test_core_viz_direction.py  test_cost_tracker.py  test_curate.py  test_dashboard_html.py  (+103 more)
ari-skill-benchmark/: DOCUMENTATION_PLAN.md  README.md  REQUIREMENTS.md  conftest.py  mcp.json  pyproject.toml
ari-skill-benchmark/src/: README.md  server.py
ari-skill-benchmark/tests/: README.md  test_server.py
ari-skill-coding/: DOCUMENTATION_PLAN.md  README.md  REFACTORING.md  mcp.json  pyproject.toml
ari-skill-coding/src/: README.md  server.py
ari-skill-coding/tests/: README.md  conftest.py  test_server.py
ari-skill-evaluator/: DOCUMENTATION_PLAN.md  MANIFEST.in  PLAN_s2p_semantic_review.md  README.md  REQUIREMENTS.md  mcp.json  pyproject.toml  skill.yaml
ari-skill-evaluator/src/: README.md  server.py
ari-skill-evaluator/tests/: README.md  test_metric_spec_claims.py  test_prompt_extraction.py  test_s2p_tools.py  test_server.py
ari-skill-figure-router/: mcp.json  pyproject.toml  skill.yaml
ari-skill-figure-router/src/: server.py
ari-skill-hpc/: DOCUMENTATION_PLAN.md  README.md  REQUIREMENTS.md  mcp.json  pyproject.toml
ari-skill-hpc/src/: README.md  server.py  singularity.py  slurm.py
ari-skill-hpc/tests/: README.md  test_capability_probe.py  test_singularity.py  test_slurm_local.py  test_slurm_remote.py
ari-skill-idea/: DOCUMENTATION_PLAN.md  README.md  REQUIREMENTS.md  mcp.json  pyproject.toml  skill.yaml
ari-skill-idea/src/: README.md  server.py  snapshot.py  virsci_runtime.py
ari-skill-idea/tests/: README.md  test_server.py  test_virsci.py  test_virsci_live.py
ari-skill-memory/: DOCUMENTATION_PLAN.md  Plan.md  README.md  REQUIREMENTS.md  mcp.json  pyproject.toml
ari-skill-memory/src/: README.md  server.py
ari-skill-memory/tests/: README.md  conftest.py  fake_letta.py  test_access_log.py  test_ancestor_scope.py  test_archival_pagination.py  test_backup_restore.py  test_checkpoint_isolation.py  test_consolidation.py  test_cow.py  test_global_memory.py  test_global_tools_removed.py  test_letta_embedding_compat.py  test_letta_http_regression.py  test_letta_live_integration.py  test_llm_config_removed.py  test_memory.py  test_react.py  test_research_memory_phase1.py  test_research_memory_typed.py  test_search_fallback.py  test_server_typed_tools.py  test_verified_context.py
ari-skill-paper/: DOCUMENTATION_PLAN.md  PLAN_s2p_claim_annotation.md  README.md  REQUIREMENTS.md  mcp.json  pyproject.toml  skill.yaml
ari-skill-paper-re/: DOCUMENTATION_PLAN.md  README.md  REQUIREMENTS.md  mcp.json  pyproject.toml  skill.yaml
ari-skill-paper-re/src/: README.md  _litellm_completer.py  _paperbench_bridge.py  _replicator_agent.py  _vendor_path.py  server.py
ari-skill-paper-re/tests/: README.md  test_compute_interface.py  test_fetch_code_bundle.py  test_litellm_basicagent_completer.py  test_litellm_completer.py  test_local_pbtask.py  test_mpi_aggregate_skel.py  test_paper_re.py  test_paperbench_bridge.py  test_paperbench_bridge_upstream.py  test_prompt_snapshots.py  test_replicator_agent.py  test_run_reproduce_and_grade.py  test_run_reproduce_slurm.py
ari-skill-paper/src/: README.md  claim_links.py  review_engine.py  rubric.py  server.py
ari-skill-paper/templates/: README.md
ari-skill-paper/tests/: README.md  conftest.py  test_claim_links.py  test_code_availability.py  test_prompt_extraction.py  test_rubric.py  test_server.py  test_verified_context_wiring.py
ari-skill-plot/: DOCUMENTATION_PLAN.md  README.md  REFACTORING.md  mcp.json  pyproject.toml  skill.yaml
ari-skill-plot/src/: README.md  server.py
ari-skill-replicate/: DOCUMENTATION_PLAN.md  README.md  REQUIREMENTS.md  mcp.json  pyproject.toml  skill.yaml
ari-skill-replicate/schemas/: README.md  replication_rubric.schema.json
ari-skill-review/: REQUIREMENTS.md  mcp.json  pyproject.toml
ari-skill-vlm/: .gitignore  DOCUMENTATION_PLAN.md  README.md  REQUIREMENTS.md  mcp.json  pyproject.toml
ari-skill-web/: DOCUMENTATION_PLAN.md  README.md  REQUIREMENTS.md  mcp.json  pyproject.toml  skill.yaml
(+1175 files in other folders)
