[project]
name = "ari-skill-benchmark"
version = "0.1.0"
description = "Experiment result analysis, visualization and statistical testing MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
