[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ari-skill-figure-router"
version = "0.1.0"
description = "Figure generation router MCP server for ARI"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "litellm>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
