[project]
name = "ari-skill-hpc"
version = "0.1.0"
description = "HPC environment tools for SLURM/Singularity - MCP Server"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0",
    "paramiko>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
