[project]
name = "ari-skill-idea"
version = "0.1.0"
description = "Research idea generation, literature survey and gap analysis MCP Server"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0", "litellm>=1.0", "arxiv>=2.0", "semanticscholar>=0.8"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
