[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ari-skill-memory"
version = "0.6.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "nest-asyncio",
]

[project.optional-dependencies]
letta = ["letta-client>=0.1"]
test = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ari_skill_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
