[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ari-skill-plot"
version = "0.1.0"
description = "Scientific figure generation MCP server for ARI"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0",
    "litellm>=1.0",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "seaborn>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
