[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ari-skill-review"
version = "0.1.0"
description = "Peer review parsing and rebuttal generation MCP Server"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0", "litellm>=1.0", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
