[project]
name = "ari-skill-vlm"
version = "0.1.0"
description = "VLM-based figure and table review for papers"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0", "litellm>=1.0", "pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

pythonpath = ["."]
