[project]
name = "ari-skill-web"
version = "0.1.0"
description = "Web search and page fetch MCP Server"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0", "duckduckgo-search>=6.0", "httpx>=0.25", "beautifulsoup4>=4.12", "arxiv>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
